--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Demoapp</title>
+  <title>Demoapp!</title>
   <base href="/">
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
+  <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0GVZvL6_gBWUbX79WpKt2-HowkKK85rA&libraries=visualization">
+</script>
 </body>
 </html>
